# zero-deepl

./: .gitignore  1_play_ground.py  3_neural_network.py  3_neural_network_2.py  3_neural_network_3.py  3_neural_network_json.py  4_NN_learning.py  4_NN_learning_2.py  4_NN_learning_3.py  4_NN_learning_4.py  4_NN_learning_play.py  5_backpropagation.py  5_backpropagation_2.py  5_backpropagation_3.py  6_1_techniques.py  6_2_weight_init_activation_histogram.py  6_3_Batch_Normalization.py  99_json_to_mlp.py  99_peek_json.py  99_peek_pickle.py  README.md  convert_pkl_to_json.py  main.py  neural-network.py  perceptron.py  pyproject.toml
dataset/: mnist.py
