[project]
name = "zero-deepl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
]

[tool.pyright]
typeCheckingMode = "off"          # or "basic"
reportMissingImports = false
reportOptionalMemberAccess = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
